tests/ui/did_you_mean/println-typo.stderr
error: cannot find macro `prinltn` in this scope
  --> $DIR/println-typo.rs:4:5
   |
LL |     prinltn!();
   |     ^^^^^^^
   |
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: similarly named macro `println` defined here
help: a macro with a similar name exists
   |
LL -     prinltn!();
LL +     println!();
   |

error: aborting due to 1 previous error

